# qtworkshop

./: .gitignore  CMakeLists.txt  awesomeserver.cpp  awesomeserver.h  main.cpp
resources/: hodor.txt  res.qrc
